--- a/watertemplate-engine/src/test/resources/templates/en_US/beta/allCommands.html
+++ b/watertemplate-engine/src/test/resources/templates/en_US/beta/allCommands.html
@@ -14,13 +14,13 @@
                 <li>
                     <a href="~item.url~"> ~item.label~ </a>
                 </li>
-            ~else:
+            :else:
                 <li>
                     <span>No items in this menu.</span>
                 </li>
-            ~
+            :~
         </ul>
-    ~else:
+    :else:
         <span>Menu unavailable.</span>
     ~
 </body>
