Improved examples for JAX-RS binding

--- a/watertemplate-example/src/main/resources/templates/en_US/nestedtemplates/master_template.html
+++ b/watertemplate-example/src/main/resources/templates/en_US/nestedtemplates/master_template.html
@@ -1,11 +1,14 @@
 <html>
+<head>
+    <title>~title~</title>
+</head>
 <body>
-    ~header~
+~header~
 
-    <div id="container">
-        ~content~
-    </div>
+<div id="container">
+    ~content~
+</div>
 
-    ~footer~
+~footer~
 </body>
 </html>
