--- a/watertemplate-site/src/main/i18n/templates/home/home.html
+++ b/watertemplate-site/src/main/i18n/templates/home/home.html
@@ -1,2 +1,37 @@
-<h1 id="name">{{#i18n}}name{{/i18n}}</h1>
-<div id="home-menu">~menu~</div>
+<div class="banner">
+    <div class="header">
+        <h1>{{#i18n}}project.name{{/i18n}}</h1>
+        <h2>{{#i18n}}project.description{{/i18n}}</h2>
+    </div>
+</div>
+
+~menu~
+
+<!--<h2 class="content-subhead">Why to use Water template engine?</h2>-->
+
+<!--<p>-->
+<!--Bla bla bla-->
+<!--</p>-->
+
+<!--<h2 class="content-subhead">Now Let's Speak Some Latin</h2>-->
+
+<!--<p>-->
+<!--Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et-->
+<!--dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip-->
+<!--ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu-->
+<!--fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia-->
+<!--deserunt mollit anim id est laborum.-->
+<!--<p>-->
+
+<!--</p>-->
+
+<!--<h2 class="content-subhead">Try Resizing your Browser</h2>-->
+
+<!--<p>-->
+<!--Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et-->
+<!--dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip-->
+<!--ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu-->
+<!--fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia-->
+<!--deserunt mollit anim id est laborum.-->
+<!--</p>-->
+</div>
