--- a/watertemplate-site/src/main/i18n/templates/master/master.html
+++ b/watertemplate-site/src/main/i18n/templates/master/master.html
@@ -7,10 +7,9 @@
 </head>
 <body>
 
-    ~header~
+    <div id="main">
+        ~content~
+    </div>
 
-    ~content~
-
-    ~footer~
 </body>
 </html>
