--- a/watertemplate-site/src/main/i18n/templates/menu/menu.html
+++ b/watertemplate-site/src/main/i18n/templates/menu/menu.html
@@ -1,16 +1,12 @@
-<div class="menu">
-    <ul>
-        <li>
-            <a href="#">Syntax</a>
-        </li>
-        <li>
-            <a href="#">Examples</a>
-        </li>
-        <li>
-            <a href="#">Maven</a>
-        </li>
-        <li>
-            <a href="#">GitHub</a>
-        </li>
-    </ul>
+<div id="menu">
+    <div class="water-menu">
+        <ul class="water-menu-list">
+            <li class="water-menu-item"><a href="#" class="water-menu-link">Home</a></li>
+            <li class="water-menu-item"><a href="#" class="water-menu-link">Quick start</a></li>
+            <li class="water-menu-item"><a href="#" class="water-menu-link">Examples</a></li>
+            <li class="water-menu-item"><a href="#" class="water-menu-link">Ducumentation</a></li>
+            <li class="water-menu-item"><a href="#" class="water-menu-link">Maven</a></li>
+            <li class="water-menu-item"><a href="#" class="water-menu-link">GitHub</a></li>
+        </ul>
+    </div>
 </div>
