--- a/watertemplate-site/src/main/i18n/templates/menu/menu.html
+++ b/watertemplate-site/src/main/i18n/templates/menu/menu.html
@@ -5,8 +5,8 @@
             <li class="water-menu-item"><a href="#" class="water-menu-link">Quick start</a></li>
             <li class="water-menu-item"><a href="#" class="water-menu-link">Examples</a></li>
             <li class="water-menu-item"><a href="#" class="water-menu-link">Ducumentation</a></li>
-            <li class="water-menu-item"><a href="#" class="water-menu-link">Maven</a></li>
-            <li class="water-menu-item"><a href="#" class="water-menu-link">GitHub</a></li>
+            <li class="water-menu-item"><a href="http://mavenrepository.com/artifact/org.watertemplate" class="water-menu-link">Maven</a></li>
+            <li class="water-menu-item"><a href="http://github.com/tiagobento/watertemplate-engine" class="water-menu-link">GitHub</a></li>
         </ul>
     </div>
 </div>
