Progress on site.

--- a/watertemplate-site/src/main/i18n/templates/home/home.html
+++ b/watertemplate-site/src/main/i18n/templates/home/home.html
@@ -1,39 +1,108 @@
-<div class="banner">
-    <div class="header">
-        <h1>{{#i18n}}project.name{{/i18n}}</h1>
+<!DOCTYPE html>
+<html>
+<head lang="en">
+    <meta charset="UTF-8">
+    <title>{{#i18n}}project.name{{/i18n}}</title>
+    <link rel="stylesheet" type="text/css" href="/css/css.css"/>
+</head>
 
-        <h2>{{#i18n}}project.description{{/i18n}}</h2>
+<body>
+
+<div id="main">
+
+    ~menu~
+
+    <div class="banner">
+        <div class="header">
+            <h1>{{#i18n}}project.name{{/i18n}}</h1>
+
+            <h2>{{#i18n}}project.description{{/i18n}}</h2>
+        </div>
     </div>
+
+
+    <div class="highlights">
+        <a class="highlight-box" href="~quick_start_path~">
+            <div class="highlight-box-title">Quick start</div>
+            <div class="highlight-box-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt
+                ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+            </div>
+        </a>
+
+        <a class="highlight-box" href="~installation_path~">
+            <div class="highlight-box-title">{{#i18n}}menu.installation{{/i18n}}</div>
+            <div class="highlight-box-content">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+            </div>
+        </a>
+
+        <a class="highlight-box" href="~documentation_path~">
+            <div class="highlight-box-title">{{#i18n}}menu.documentation{{/i18n}}</div>
+            <div class="highlight-box-content">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+            </div>
+        </a>
+
+        <a class="highlight-box" href="~examples_path~">
+            <div class="highlight-box-title">{{#i18n}}menu.examples{{/i18n}}</div>
+            <div class="highlight-box-content">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+            </div>
+        </a>
+    </div>
+
+
+    <div class="info">
+        <div class="title">{{#i18n}}home.why-to-use?{{/i18n}}</div>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+            <br />
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+        </p>
+    </div>
+
+    <div class="info">
+        <div class="title">Lorem ipsum dolor sit amet</div>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+            <br />
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+        </p>
+    </div>
+
+    <div class="info">
+        <div class="title">Consectetur minim adipisicing elit</div>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+            <br />
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+        </p>
+    </div>
+
+
 </div>
 
-~menu~
-
-<div class="highlights">
-    <a class="highlight-box" href="#">
-        <div class="highlight-box-title">Quickstart</div>
-        <div class="highlight-box-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
-            ut labore et dolore magna aliqua. Ut enim ad minim veniam.
-        </div>
-    </a>
-
-    <a class="highlight-box" href="#">
-        <div class="highlight-box-title">Installation</div>
-        <div class="highlight-box-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
-            ut labore et dolore magna aliqua. Ut enim ad minim veniam.
-        </div>
-    </a>
-
-    <a class="highlight-box" href="#">
-        <div class="highlight-box-title">Documentation</div>
-        <div class="highlight-box-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
-            ut labore et dolore magna aliqua. Ut enim ad minim veniam.
-        </div>
-    </a>
-
-    <a class="highlight-box" href="#">
-        <div class="highlight-box-title">Examples</div>
-        <div class="highlight-box-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
-            ut labore et dolore magna aliqua. Ut enim ad minim veniam.
-        </div>
-    </a>
-</div>
+</body>
+</html>
