--- a/watertemplate-site/src/main/webapp/css/css.css
+++ b/watertemplate-site/src/main/webapp/css/css.css
@@ -3,25 +3,27 @@ body {
     font-family: Helvetica;
     padding: 0;
     margin: 0;
+    font-weight: lighter;
 }
 
-#menu,
-.menu-link {
-    -webkit-transition: all 0.2s ease-out;
-    -moz-transition: all 0.2s ease-out;
-    -ms-transition: all 0.2s ease-out;
-    -o-transition: all 0.2s ease-out;
-    transition: all 0.2s ease-out;
-}
-
-.content {
+#main {
     margin: 0 auto;
-    padding: 0 2em;
-    max-width: 800px;
+    text-align: center;
     margin-bottom: 50px;
-    line-height: 1.6em;
-    position: relative;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .header {
      margin: 0;
@@ -79,11 +81,9 @@ body {
     top: 0;
     left: 0;
     z-index: 1000;
-    background: rgba(255, 255, 255, 0.1);
+    background: rgba(96, 143, 185, 0.95);
     font-weight: lighter;
     width: 100%;
-    overflow-y: auto;
-    -webkit-overflow-scrolling: touch;
 }
      #menu .water-menu,
      #menu .water-menu ul {
@@ -99,16 +99,16 @@ body {
     }
 
         #menu .water-menu ul li a {
-            cursor: pointer;
             color: black;
+            cursor: pointer;
             border: none;
             text-decoration: none;
-            padding: 0em 0.6em 0em 0.6em;
+            padding: 0em 0.7em 0em 0.7em;
         }
 
         #menu .water-menu li a:hover,
         #menu .water-menu li a:focus {
-            text-decoration: underline;
+            color: rgba(0, 0, 0, 0.5);
         }
 
 
@@ -198,14 +198,14 @@ body {
 
 
 .highlights {
-    margin: 10px;
+    margin: 15px 10px 10px 10px;
+    vertical-align: top;
     text-align: center;
 }
 
 
 .highlight-box {
     text-decoration: none;
-    font-weight: lighter;
     box-sizing: border-box;
     border: 1px solid #797874;
     border-radius: 3px;
@@ -217,7 +217,7 @@ body {
 }
 
 .highlight-box:hover {
-    box-shadow: #555 0px 0px 5px;
+    box-shadow: #bbb 0px 0px 10px;
 }
 
     .highlight-box .highlight-box-title {
@@ -232,5 +232,46 @@ body {
         text-align: justify;
         color: black;
         padding: 10px 20px 10px 20px;
+    }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.info {
+    color: #666;
+    vertical-align: top;
+    box-sizing: border-box;
+    display: inline-block;
+    max-width: 360px;
+    padding: 10px;
+    margin: 5px 10px 5px 10px;
+}
+
+    .info .title {
+        text-align: left;
+        font-size: 2em;
+    }
+
+    .info p {
+        font-size: 1.05em;
+        line-height: 1.4em;
+        text-align: justify;
     }
