Some texts in the home page.

--- a/watertemplate-site/src/main/i18n/templates/menu/menu.html
+++ b/watertemplate-site/src/main/i18n/templates/menu/menu.html
@@ -1,15 +1,35 @@
 <div id="menu">
     <div class="water-menu">
         <ul class="water-menu-list">
-            <li class="water-menu-item"><a href="~home_path~" class="water-menu-link">Home</a></li>
 
-            <li class="water-menu-item"><a href="~quick_start_path~" class="water-menu-link">Quick start</a></li>
-            <li class="water-menu-item"><a href="~installation_path~" class="water-menu-link">{{#i18n}}menu.installation{{/i18n}}</a></li>
-            <li class="water-menu-item"><a href="~examples_path~" class="water-menu-link">{{#i18n}}menu.examples{{/i18n}}</a></li>
-            <li class="water-menu-item"><a href="~documentation_path~" class="water-menu-link">{{#i18n}}menu.documentation{{/i18n}}</a></li>
+            <li class="water-menu-item">
+                <a href="~home_path~" class="water-menu-link">Home</a>
+            </li>
 
-            <li class="water-menu-item"><a href="http://mavenrepository.com/artifact/org.watertemplate" class="water-menu-link">Maven</a></li>
-            <li class="water-menu-item"><a href="http://github.com/tiagobento/watertemplate-engine" class="water-menu-link">GitHub</a></li>
+            <li class="water-menu-item">
+                <a href="~quick_start_path~" class="water-menu-link">Quick start</a>
+            </li>
+
+            <li class="water-menu-item">
+                <a href="~installation_path~" class="water-menu-link">{{#i18n}}menu.installation{{/i18n}}</a>
+            </li>
+
+            <li class="water-menu-item">
+                <a href="~examples_path~" class="water-menu-link">{{#i18n}}menu.examples{{/i18n}}</a>
+            </li>
+
+            <li class="water-menu-item">
+                <a href="~documentation_path~" class="water-menu-link">{{#i18n}}menu.documentation{{/i18n}}</a>
+            </li>
+
+            <li class="water-menu-item">
+                <a href="http://mavenrepository.com/artifact/org.watertemplate" class="water-menu-link">Maven</a>
+            </li>
+
+            <li class="water-menu-item">
+                <a href="http://github.com/tiagobento/watertemplate-engine" class="water-menu-link">GitHub</a>
+            </li>
+
         </ul>
     </div>
 </div>
