--- a/watertemplate-site/src/main/webapp/css/css.css
+++ b/watertemplate-site/src/main/webapp/css/css.css
@@ -1,9 +1,14 @@
 body {
-    color: #777;
+    color: #555;
     font-family: Helvetica;
     padding: 0;
     margin: 0;
     font-weight: lighter;
+}
+
+ul {
+    padding-left: 0px;
+    list-style-type: none;
 }
 
 #main {
@@ -81,17 +86,13 @@ body {
     top: 0;
     left: 0;
     z-index: 1000;
-    background: rgba(96, 143, 185, 0.95);
+    background: rgba(104, 155, 202, 0.95);
     font-weight: lighter;
     width: 100%;
 }
      #menu .water-menu,
      #menu .water-menu ul {
-        padding-left: 0px;
         text-align: center;
-        border: none;
-        list-style-type: none;
-        background: transparent;
     }
 
     #menu .water-menu ul li {
@@ -106,8 +107,7 @@ body {
             padding: 0em 0.7em 0em 0.7em;
         }
 
-        #menu .water-menu li a:hover,
-        #menu .water-menu li a:focus {
+        #menu .water-menu li a:hover {
             color: rgba(0, 0, 0, 0.5);
         }
 
@@ -275,3 +275,126 @@ body {
         line-height: 1.4em;
         text-align: justify;
     }
+
+
+
+
+
+
+
+    #tutorial-main {
+        background: url('/assets/grayton-beach-white-sand.png') 0 0 no-repeat fixed;
+        background-size: cover;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+    /* quick-start */
+
+    .table-of-contents {
+        background-color: #eee;
+        min-height: 100%;
+        position: fixed;
+        padding-top: 50px;
+        width: 15em;
+        color: #222;
+        top: 0;
+        left; 0;
+    }
+
+    .table-of-contents ol {
+        padding-right: 20px;
+    }
+
+    .table-of-contents li {
+        font-size: 0.9em;
+        line-height: 1.7em;
+    }
+
+    .table-of-contents a {
+            color: #222;
+            text-decoration: none;
+        }
+
+    .table-of-contents a:hover {
+        text-decoration: underline;
+    }
+
+    .table-of-contents-title {
+        margin: 30px 0px 5px 0px;
+        text-align: center;
+        font-size: 1.5em;
+    }
+
+
+
+
+
+
+
+    .steps-wrapper {
+        margin: 40px 0px 20px 15em;
+        padding: 40px;
+        background-color: rgba(255, 255, 255, 0.95);
+    }
+
+    .steps {
+        font-weight: lighter;
+        padding-left: 2em;
+        font-size: 2em;
+    }
+
+    .steps li {
+        margin: 5px 5px 40px 5px;
+    }
+
+    .step-content {
+        margin: 20px 0;
+        font-size: 0.5em;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    .water-syntax {
+        color: #e0c46c;
+    }
+
+
+
+
+
+/* examples */
+
+
+
+.examples-list {
+    padding: 10px;
+    list-style-type: circle;
+    line-height: 1.5em;
+}
+
+.examples-list li {
+    margin: 5px;
+}
