Many, many changes. Created a structure to change the titles.

--- a/watertemplate-site/src/main/i18n/templates/pages/tutorials/documentation/documentation-step1.html
+++ b/watertemplate-site/src/main/i18n/templates/pages/tutorials/documentation/documentation-step1.html
@@ -1,1 +1,4 @@
-1
+<a name="step1" class="step-title">{{#i18n}}documentation.step1{{/i18n}}</a>
+<div class="step-content">
+    <p>{{#i18n}}documentation.step1.text{{/i18n}}</p>
+</div>
