--- a/watertemplate-site/src/main/i18n/templates/pages/tutorials/documentation/documentation-step2.html
+++ b/watertemplate-site/src/main/i18n/templates/pages/tutorials/documentation/documentation-step2.html
@@ -1,1 +1,4 @@
-2
+<a name="step2" class="step-title">{{#i18n}}documentation.step2{{/i18n}}</a>
+<div class="step-content">
+    <p>{{#i18n}}documentation.step2.text{{/i18n}}</p>
+</div>
