--- a/watertemplate-site/src/main/i18n/templates/pages/tutorials/documentation/documentation.html
+++ b/watertemplate-site/src/main/i18n/templates/pages/tutorials/documentation/documentation.html
@@ -10,31 +10,14 @@
     </ol>
 </div>
 
+
 <div class="steps-wrapper">
     <ol class="steps">
+        ~for step in subtemplates:
         <li>
-            ~tutorial_step1~
+            ~step~
         </li>
-
-        <li>
-            ~tutorial_step2~
-        </li>
-
-        <li>
-            ~tutorial_step3~
-        </li>
-
-        <li>
-            ~tutorial_step4~
-        </li>
-
-        <li>
-            ~tutorial_step5~
-        </li>
-
-        <li>
-            ~tutorial_step6~
-        </li>
+        :~
     </ol>
 </div>
 
