Changed Header mechanism.

--- a/watertemplate-site/src/main/i18n/templates/pages/tutorials/quick_start/title.html
+++ b/watertemplate-site/src/main/i18n/templates/pages/tutorials/quick_start/title.html
@@ -1,1 +1,1 @@
-{{#i18n}}project.name{{/i18n}} | {{#i18n}}quick-start.header.title{{/i18n}}
+<title> {{#i18n}}project.name{{/i18n}} | {{#i18n}}quick-start.header.title{{/i18n}} </title>
