--- a/watertemplate-site/src/main/i18n/templates/pages/tutorials/header.html
+++ b/watertemplate-site/src/main/i18n/templates/pages/tutorials/header.html
@@ -1,3 +1,3 @@
-<title>~title~</title>
+~header_continuation~
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.5/styles/darkula.min.css">
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.5/highlight.min.js"></script>
