Improved header system.

--- a/watertemplate-site/src/main/i18n/templates/pages/examples/examples.html
+++ b/watertemplate-site/src/main/i18n/templates/pages/examples/examples.html
@@ -7,5 +7,7 @@
 </div>
 
 <div id="select-one-example">
-    Select one example from the list ⟵
+    Select one example from the list
+    <br />
+    ⟵
 </div>
