--- a/watertemplate-site/src/main/i18n/templates/master/header.html
+++ b/watertemplate-site/src/main/i18n/templates/master/header.html
@@ -1,1 +1,3 @@
-<title>{{#i18n}}project.name{{/i18n}}</title>
+<meta charset="UTF-8">
+<link rel="stylesheet" type="text/css" href="/css/css.css" />
+~content~
