--- a/watertemplate-site/src/main/i18n/templates/pages/examples/header.html
+++ b/watertemplate-site/src/main/i18n/templates/pages/examples/header.html
@@ -1,1 +1,1 @@
-{{#i18n}}project.name{{/i18n}} | {{#i18n}}examples.header.title{{/i18n}}
+<title> {{#i18n}}project.name{{/i18n}} | {{#i18n}}examples.header.title{{/i18n}} </title>
