--- a/watertemplate-site/src/main/i18n/templates/pages/tutorials/title.html
+++ b/watertemplate-site/src/main/i18n/templates/pages/tutorials/title.html
@@ -1,1 +1,1 @@
-<title> {{#i18n}}project.name{{/i18n}} | {{#i18n}}turorials.header.title{{/i18n}} </title>
+<title> {{#i18n}}project.name{{/i18n}} | {{#i18n}}tutorials.header.title{{/i18n}} </title>
